--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: rgb(75, 167, 62);">
+<html lang="en" style="background-color:green;">
  <!-- INLINE STYLING THROUGH THE USE OF ATTRIBUTES -->
 <head>
     <meta charset="UTF-8">
@@ -19,17 +19,71 @@
             <li style="float:left;padding-left: 2%;">About</li>
             <li style="float:left;padding-left: 2%;">Contact</li>
         </ul>
-        <!-- Ordered List -->
-        <!-- <ol style="background-color: cyan;">
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-         </ol> -->
     </nav>  
     <br>   
 
     <h1>Heading Element 1</h1>
+
 </header>
+
+
+<!-- MAIN -->
+<main style="background-color: green;">
+    <h2>MAIN CONTENT</h2>
+    <!-- ASIDE -->
+    <aside style="background-color: yellow; float: right; height: 100%; width: 30%;">
+        <h2 style="text-align: center;">Aside Element</h2>
+        <ul> 
+            <li>Unordered list 1</li>
+            <li>Unordered list 2</li>
+            <li>Unordered list 3</li>
+            <li>Unordered list 4</li>
+            <li>Unordered list 5</li>
+        </ul>
+        <ol>
+            <li>Ordered List Item 1</li>            
+            <li>Ordered List Item 2</li>            
+            <li>Ordered List Item 3</li>            
+            <li>Ordered List Item 4</li>            
+            <li>Ordered List Item 5</li>            
+        </ol>
+        <dl>
+            <dt style="padding-left: 5%;">Coffee</dt>
+            <dd>Hot and Cold.</dd>
+            <dt style="padding-left: 5%;">Milk Tea</dt>
+            <dd>Cold and Sweet</dd>
+        </dl>
+    </aside>
+    <!-- SECTION 1 -->
+    <section style="background-color: red; height: 20vh;">
+        <!-- ARTICLE 1 -->
+        <article style="background-color: yellow; width: 50%;">
+            <h2 style="text-align: center;">Article 1</h2>
+        </article>
+    </section>
+
+
+    <!-- SECTION 2-->
+    <section style="background-color: red; height: 100vh;">
+        <!-- ARTICLE 2 -->
+        <article style="background-color: yellow; width: 50%;">
+            <h2 style="text-align: center;">Article 2</h2>
+        </article>
+
+    </section>
+    <hr style="width: 50;">
+    <!--SECTION 3-->
+    <section>
+        <section style="background-color: red; height: 100vh;">
+            <article style="background-color: yellow;">
+                <h2 style="text-align: center;">Article 3</h2>
+                <p style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla amet eaque molestias provident veritatis beatae sed tempore unde neque soluta.</p>
+            </article>
+            <img src="https://images.pexels.com/photos/5278835/pexels-photo-5278835.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="300px" height="300px" alt="Photo by Anni Roenkae">
+        </section>
+    </section>
+
+
 
 <body>
     
