Add images section

--- a/index.html
+++ b/index.html
@@ -73,15 +73,29 @@
     </section>
     <hr style="width: 50;">
     <!--SECTION 3-->
-    <section>
         <section style="background-color: red; height: 100vh;">
+            <img src="https://images.pexels.com/photos/440731/pexels-photo-440731.jpeg?auto=compress&cs=tinysrgb&w=1600" width="300px" height="300px" alt="Photo by Ákos Szabó" style="float: left;">
+            <br>
+             <br>
+             <br>
+             <br>
             <article style="background-color: yellow;">
                 <h2 style="text-align: center;">Article 3</h2>
                 <p style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla amet eaque molestias provident veritatis beatae sed tempore unde neque soluta.</p>
             </article>
-            <img src="https://images.pexels.com/photos/5278835/pexels-photo-5278835.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="300px" height="300px" alt="Photo by Anni Roenkae">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <img src="https://images.pexels.com/photos/1743165/pexels-photo-1743165.jpeg?auto=compress&cs=tinysrgb&w=1600" width="300px" height="300px" alt="Photo by Aron Visuals" style="float: right;">
+            <article style="background-color: yellow;">
+                <h2 style="text-align: center;">Article 4</h2>
+                <p style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nemo illum hic reprehenderit iure aliquid, ut velit voluptatem accusamus nesciunt! Repellendus, provident maxime! Amet, voluptatibus quod itaque aspernatur impedit magni recusandae sit sunt error laborum delectus cum, optio quam totam.</p>
+            </article>
+
         </section>
-    </section>
 
 
 
