--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic Exercise</title>
+    <style>
+        img{
+            width: 300px;
+            height: 300px;
+        }
+    </style>
 </head>
 <body>
 <!-- HEADER -->
@@ -56,6 +62,7 @@
     </aside>
     <!-- SECTION 1 -->
     <section style="background-color: red; height: 20vh;">
+        <h2>SECTION 1</h2>
         <!-- ARTICLE 1 -->
         <article style="background-color: yellow; width: 50%;">
             <h2 style="text-align: center;">Article 1</h2>
@@ -65,16 +72,17 @@
 
     <!-- SECTION 2-->
     <section style="background-color: red; height: 100vh;">
+        <h2>SECTION 2</h2>
         <!-- ARTICLE 2 -->
         <article style="background-color: yellow; width: 50%;">
             <h2 style="text-align: center;">Article 2</h2>
         </article>
 
     </section>
-    <hr style="width: 50;">
     <!--SECTION 3-->
-        <section style="background-color: red; height: 100vh;">
-            <img src="https://images.pexels.com/photos/440731/pexels-photo-440731.jpeg?auto=compress&cs=tinysrgb&w=1600" width="300px" height="300px" alt="Photo by Ákos Szabó" style="float: left;">
+        <section style="background-color: red; height: 120vh;">
+            <h2>SECTION 3</h2>
+            <img src="https://images.pexels.com/photos/440731/pexels-photo-440731.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Photo by Ákos Szabó" style="float: left;">
             <br>
              <br>
              <br>
@@ -89,7 +97,7 @@
             <br>
             <br>
             <br>
-            <img src="https://images.pexels.com/photos/1743165/pexels-photo-1743165.jpeg?auto=compress&cs=tinysrgb&w=1600" width="300px" height="300px" alt="Photo by Aron Visuals" style="float: right;">
+            <img src="https://images.pexels.com/photos/1743165/pexels-photo-1743165.jpeg?auto=compress&cs=tinysrgb&w=1600"  alt="Photo by Aron Visuals" style="float: right;">
             <article style="background-color: yellow;">
                 <h2 style="text-align: center;">Article 4</h2>
                 <p style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nemo illum hic reprehenderit iure aliquid, ut velit voluptatem accusamus nesciunt! Repellendus, provident maxime! Amet, voluptatibus quod itaque aspernatur impedit magni recusandae sit sunt error laborum delectus cum, optio quam totam.</p>
@@ -97,9 +105,16 @@
 
         </section>
 
+    </main>
 
 
-<body>
+    <!-- FOOTER SECTION -->
+    <footer style="text-align: center;background-color: green;height: 20vh;">
+        <p style="padding-top: 5%;">&#169;Copyright 2023</p>
+    </footer>
+
+
+
     
 </body>
 </html>
